--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,10 @@
 site_name: HILA 256/LAC 252 Introduction to Modern Latin America
+site_url: https://chadblack.net/2023MLA/
+site_author: Chad Black
+site_description: A chad_black production
+
+# Copyright
+copyright: Copyright &copy; 2022 Chad Black
 
 theme:
     custom_dir: docs/overrides
@@ -16,7 +22,7 @@ theme:
       primary: blue grey
       accent: indigo
       toggle:
-        icon: material/toggle-switch-off-outline
+        icon: material/brightness-7
         name: Switch to dark mode
 
     # Dark mode
@@ -25,7 +31,7 @@ theme:
       primary: blue grey
       accent: indigo
       toggle:
-        icon: material/toggle-switch
+        icon: material/brightness-3
         name: Switch to light mode
 
 # Extensions
@@ -36,9 +42,9 @@ markdown_extensions:
   # - attr_list
   # - pymdownx.arithmatex:
   #    generic: true
-  # - pymdownx.superfences
-  # - pymdownx.details
-  # - pymdownx.magiclink
+  - pymdownx.superfences
+  - pymdownx.details
+  - pymdownx.magiclink
   - pymdownx.tasklist:
       custom_checkbox: true
   - def_list
@@ -61,3 +67,11 @@ extra_javascript:
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://unpkg.com/mermaid/dist/mermaid.min.js 
+
+nav:
+  - Home: index.md
+  - Syllabus: syllabus.md
+  - Assignments: assignments.md
+  - Calendar: calendar.md
+
+  
