--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,5 +77,6 @@ nav:
   
   - Resources:
     - Making Notes: resources/an approach to making notes.md
+    - La Llorona Review: resources/la llorona review essay.md
 
 
